working with css

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <script src="./bundle.js" defer></script>
   </head>
   <body>
+    <div class="navbar">
+
+    </div>
     <div id="map"></div>
+    <!-- <div id="sidebar">sidebar</div> -->
   </body>
 </html>
